k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: step-web
  namespace: step
  annotations:
    cert-manager.io/issuer: letsencrypt-prod-http01
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - step.ma-hb.com
      secretName: step-web-tls
  rules:
    - host: step.ma-hb.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: step-web
                port:
                  number: 80
